crates/flotilla-tui/tests/snapshots/snapshots__help_screen.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  | my-project | [+]
┌─────────────────────────────────────────────────────────────────── ⚙ ┐┌ Preview ─────────────────────────────────────┐
│      Source     Path  ┌ Help ↓ ──────────────────────────────────────────────────────────────┐                       │
│                       │Item Icons                                                            │                       │
│                       │●  Checkout with workspace    ○  Checkout (no workspace)              │                       │
│                       │▶  Running session            ◆  Idle session                         │                       │
│                       │⊙  Pull request               ◇  Issue                                │                       │
│                       │⊶  Remote branch                                                      │                       │
│                       │                                                                      │                       │
│                       │Column Indicators                                                     │                       │
│                       │WT: ◆ main  ✓ checked out                                             │                       │
│                       │WS: ● has workspace  2/3/… multiple                                   │                       │
│                       │PR: ✓ merged  ✗ closed                                                │                       │
│                       │Git: ? untracked  M modified  ↑ ahead  ↓ behind                       │                       │
│                       │                                                                      │                       │
│                       │Navigation                                                            │                       │
│                       │Down / j          Move selection down                                 │                       │
│                       │Up / k            Move selection up                                   │                       │
│                       │                                                                      │                       │
│                       │Actions                                                               │                       │
│                       │Enter             Confirm / execute                                   │                       │
│                       │.                 Open action menu                                    │                       │
│                       │n                 New branch input                                    │                       │
│                       │d                 Remove checkout                                     │                       │
│                       │p                 Open change request in browser                      │                       │
│                       │a                 Open file picker                                    │                       │
│                       │l                 Cycle layout                                        │                       │
│                       └──────────────────────────────────────────────────────────────────────┘                       │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
HELP                         <j> DOWN  <k> UP  <ESC> CLOSE  <?> CLOSE 
