crates/flotilla-tui/tests/snapshots/snapshots__preview_session.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  | my-project | [+]
┌─────────────────────────────────────────────────────────────────── ⚙ ┐┌ Preview ─────────────────────────────────────┐
│      Source     Path  Descriptio Branc WT  WS  PR   SS   Issues Git  ││Description: Debug API endpoints              │
│      ── Sessions ──                                                  ││Branch: feat/session-branch                   │
│▸  ▶             s5    Debug API  feat/              ▶                ││Session: Debug API endpoints                  │
│                                                                      ││Id: s5                                        │
│                                                                      ││Status: Running                               │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
LAYOUT AUTO                  <ENT> OPEN  <.> MENU  </> SEARCH  <h> HOST LOCAL  <n> NEW  <?> HELP 
