crates/flotilla-tui/tests/snapshots/snapshots__selected_item_preview.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  | my-project | [+]
┌─────────────────────────────────────────────────────────────────── ⚙ ┐┌ Preview ─────────────────────────────────────┐
│      Source     Path  Descriptio Branc WT  WS  PR   SS   Issues Git  ││Description: checkout feat-dashboard          │
│      ── Checkouts ──                                                 ││Branch: feat-dashboard                        │
│▸  ○                 f checkout f feat- ✓                             ││Path: /test/my-project/feat-dashboard         │
│      ── Pull Requests ──                                             ││                                              │
│   ⊙                   Build anal feat-         #99                   ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
/ for commands               <ENT> OPEN  <.> MENU  </> SEARCH  <n> NEW  <?> HELP    ◫ auto   @local
