crates/flotilla-tui/tests/snapshots/snapshots__selected_item_preview_below.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  | my-project | [+]
┌───────────────────────────────────────────────────────────────────────────────────── ⚙ ┐
│      Source     Path       Description         Branch    WT  WS  PR   SS   Issues Git  │
│      ── Checkouts ──                                                                   │
│▸  ○                   feat checkout feat-dashb feat-dash ✓                             │
│      ── Pull Requests ──                                                               │
│   ⊙                        Build analytics das feat-dash         #99                   │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
┌ Preview ───────────────────────────────────────────────────────────────────────────────┐
│Description: checkout feat-dashboard                                                    │
│Branch: feat-dashboard                                                                  │
│Path: /test/my-project/feat-dashboard                                                   │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
LAYOUT BELOW <↵> OPEN <.> MENU </> SEARCH <n> NEW <K> KEYS <?> HELP 
