crates/flotilla-tui/tests/snapshots/snapshots__single_repo_with_items.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
assertion_line: 41
expression: output
---
 ⚓  flotilla  | my-project | [+]
┌─────────────────────────────────────────────────────────────────── ⚙ ┐┌ Preview ─────────────────────────────────────┐
│      Description     Branch          WT  WS  PR   SS   Issues   Git  ││Description: checkout feat-login              │
│      ── Worktrees ──                                                 ││Branch: feat-login                            │
│▸  ○  checkout feat-… feat-login      ✓                               ││Path: /test/my-project/feat-login             │
│      ── Pull Request                                                 ││                                              │
│   ⊙  Add login page  —                       #42                     ││                                              │
│      ── Issues ──                                                    ││                                              │
│   ◇  Users need aut… —                                               ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
│                                                                      ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
 enter:open  d:remove worktree  .:menu  /:search  n:new  r:refresh  space:select  ?:help  q:quit
